@@ -1,4 +1,4 @@
-%define glibcrelease 20
+%define glibcrelease 21
 %define run_glibc_tests 1
 %define auxarches i586 i686 athlon sparcv9v sparc64v alphaev6
 %define xenarches i686 athlon
@@ -1010,6 +1010,9 @@ rm -f *.filelist*
 %endif
 
 %changelog
+* Mon Oct 15 2007 Jakub Jelinek <jakub@redhat.com> 2.6.90-21
+- fix getgr{name,gid}{,_r} with nscd
+
 * Sun Oct 14 2007 Jakub Jelinek <jakub@redhat.com> 2.6.90-20
 - install <bits/error.h> (#330031)
 - disable -D_FORTIFY_SOURCE{,=2} support (with a warning) for
